--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    color: blueviolet;
+    color: red;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
